--- a/src/main/resources/templates/personalData.html
+++ b/src/main/resources/templates/personalData.html
@@ -11,6 +11,8 @@
 	<link th:href="@{/plugins/font-awesome-4.7.0/css/font-awesome.min.css}" rel="stylesheet" type="text/css">
 <link rel="stylesheet" type="text/css" th:href="@{/css/checkout.css}">
 <link rel="stylesheet" type="text/css" th:href="@{/css/checkout_responsive.css}">
+	<link rel="stylesheet" type="text/css" th:href="@{/css/contact.css}">
+	<link rel="stylesheet" type="text/css" th:href="@{/css/contact_responsive.css}">
 </head>
 <body>
 
@@ -205,175 +207,65 @@
 			<div class="row">
 
 				<!-- Billing Info -->
-				<div class="col-lg-6">
+
+				<div class="col-lg-6" th:if="${adress.id == null}">
 					<div class="billing checkout_section">
-						<div class="section_title">Billing Address</div>
-						<div class="section_subtitle">Enter your address info</div>
+						<div class="section_title">Adres</div>
+						<div class="section_subtitle">Podaj swoj adres</div>
 						<div class="checkout_form_container">
-							<form action="#" id="checkout_form" class="checkout_form">
-								<div class="row">
-									<div class="col-xl-6">
-										<!-- Name -->
-										<label for="checkout_name">First Name*</label>
-										<input type="text" id="checkout_name" class="checkout_input" required="required">
-									</div>
-									<div class="col-xl-6 last_name_col">
-										<!-- Last Name -->
-										<label for="checkout_last_name">Last Name*</label>
-										<input type="text" id="checkout_last_name" class="checkout_input" required="required">
-									</div>
+							<form action="#" th:action="@{/adress}" th:object="${adress}" method="post" id="checkout_form" class="checkout_form">
+								<div>
+									<label for="city">Miasto</label>
+									<input th:field="*{city}" type="text" id="city" class="checkout_input">
 								</div>
 								<div>
-									<!-- Company -->
-									<label for="checkout_company">Company</label>
-									<input type="text" id="checkout_company" class="checkout_input">
+									<label for="street">Ulica</label>
+									<input th:field="*{street}" type="text" id="street" class="checkout_input">
 								</div>
 								<div>
-									<!-- Country -->
-									<label for="checkout_country">Country*</label>
-									<select name="checkout_country" id="checkout_country" class="dropdown_item_select checkout_input" require="required">
-										<option></option>
-										<option>Lithuania</option>
-										<option>Sweden</option>
-										<option>UK</option>
-										<option>Italy</option>
-									</select>
+									<label for="postCode">Kod Pocztowy</label>
+									<input th:field="*{postCode}" type="text" id="postCode" class="checkout_input">
 								</div>
 								<div>
-									<!-- Address -->
-									<label for="checkout_address">Address*</label>
-									<input type="text" id="checkout_address" class="checkout_input" required="required">
-									<input type="text" id="checkout_address_2" class="checkout_input checkout_address_2" required="required">
-								</div>
-								<div>
-									<!-- Zipcode -->
-									<label for="checkout_zipcode">Zipcode*</label>
-									<input type="text" id="checkout_zipcode" class="checkout_input" required="required">
-								</div>
-								<div>
-									<!-- City / Town -->
-									<label for="checkout_city">City/Town*</label>
-									<select name="checkout_city" id="checkout_city" class="dropdown_item_select checkout_input" require="required">
-										<option></option>
-										<option>City</option>
-										<option>City</option>
-										<option>City</option>
-										<option>City</option>
-									</select>
-								</div>
-								<div>
-									<!-- Province -->
-									<label for="checkout_province">Province*</label>
-									<select name="checkout_province" id="checkout_province" class="dropdown_item_select checkout_input" require="required">
-										<option></option>
-										<option>Province</option>
-										<option>Province</option>
-										<option>Province</option>
-										<option>Province</option>
-									</select>
-								</div>
-								<div>
-									<!-- Phone no -->
-									<label for="checkout_phone">Phone no*</label>
-									<input type="phone" id="checkout_phone" class="checkout_input" required="required">
-								</div>
-								<div>
-									<!-- Email -->
-									<label for="checkout_email">Email Address*</label>
-									<input type="phone" id="checkout_email" class="checkout_input" required="required">
-								</div>
-								<div class="checkout_extra">
-									<div>
-										<input type="checkbox" id="checkbox_terms" name="regular_checkbox" class="regular_checkbox" checked="checked">
-										<label for="checkbox_terms"><img src="images/check.png" alt=""></label>
-										<span class="checkbox_title">Terms and conditions</span>
-									</div>
-									<div>
-										<input type="checkbox" id="checkbox_account" name="regular_checkbox" class="regular_checkbox">
-										<label for="checkbox_account"><img src="images/check.png" alt=""></label>
-										<span class="checkbox_title">Create an account</span>
-									</div>
-									<div>
-										<input type="checkbox" id="checkbox_newsletter" name="regular_checkbox" class="regular_checkbox">
-										<label for="checkbox_newsletter"><img src="images/check.png" alt=""></label>
-										<span class="checkbox_title">Subscribe to our newsletter</span>
-									</div>
+									<label for="country">Kraj</label>
+									<input th:field="*{country}" type="text" id="country" class="checkout_input">
 								</div>
 							</form>
 						</div>
 					</div>
+					<button class="button contact_button" type="submit" form="checkout_form" value="Submit"><span>Dodaj adres</span></button>
 				</div>
 
-				<!-- Order Info -->
-
-				<div class="col-lg-6">
-					<div class="order checkout_section">
-						<div class="section_title">Twoje dane</div>
-						<div class="section_subtitle">Dane osobowe</div>
-
-						<!-- Order details -->
-<!--						<div class="order_list_container">-->
-<!--							<div class="order_list_bar d-flex flex-row align-items-center justify-content-start">-->
-<!--								<div class="order_list_title">Product</div>-->
-<!--								<div class="order_list_value ml-auto">Total</div>-->
-<!--							</div>-->
-<!--							<ul class="order_list">-->
-<!--								<li class="d-flex flex-row align-items-center justify-content-start">-->
-<!--									<div class="order_list_title">Cocktail Yellow dress</div>-->
-<!--									<div class="order_list_value ml-auto">$59.90</div>-->
-<!--								</li>-->
-<!--								<li class="d-flex flex-row align-items-center justify-content-start">-->
-<!--									<div class="order_list_title">Subtotal</div>-->
-<!--									<div class="order_list_value ml-auto">$59.90</div>-->
-<!--								</li>-->
-<!--								<li class="d-flex flex-row align-items-center justify-content-start">-->
-<!--									<div class="order_list_title">Shipping</div>-->
-<!--									<div class="order_list_value ml-auto">Free</div>-->
-<!--								</li>-->
-<!--								<li class="d-flex flex-row align-items-center justify-content-start">-->
-<!--									<div class="order_list_title">Total</div>-->
-<!--									<div class="order_list_value ml-auto">$59.90</div>-->
-<!--								</li>-->
-<!--							</ul>-->
-<!--						</div>-->
-
-						<div class="col-lg-3 offset-xl-1 contact_col">
-							<div class="contact_info">
-								<div class="contact_info_section">
-									<div class="contact_info_title">Marketing</div>
-									<ul>
-<!--										<li>Imie: <span th:text="${user.firstName}"></span></li>-->
-<!--										<li>Naziwsko: <span th:text="${user.lastName}"></span></li>-->
-									</ul>
-								</div>
+				<div th:if="${adress.id!=null}">
+					<div class="col-lg-4 offset-xl-2 contact_col">
+						<div class="contact_info">
+							<div class="contact_info_section">
+								<div class="contact_info_title" style="font-size:40px">Dane adresowe:</div>
+								<ul>
+									<li>Miasto: <span th:text="${adress.city}"></span></li>
+									<li>Ulica: <span th:text="${adress.street}"></span></li>
+									<li>Kod pocztowy: <span th:text="${adress.postCode}"></span></li>
+									<li>Kraj: <span th:text="${adress.country}"></span></li>
+								</ul>
 							</div>
+							<div class="button order_button"><a th:href="@{/edit}">Zmien moje dane</a></div>
 						</div>
+					</div>
+				</div>
 
-						<!-- Payment Options -->
-						<div class="payment">
-							<div class="payment_options">
-								<label class="payment_option clearfix">Paypal
-									<input type="radio" name="radio">
-									<span class="checkmark"></span>
-								</label>
-								<label class="payment_option clearfix">Cach on delivery
-									<input type="radio" name="radio">
-									<span class="checkmark"></span>
-								</label>
-								<label class="payment_option clearfix">Credit card
-									<input type="radio" name="radio">
-									<span class="checkmark"></span>
-								</label>
-								<label class="payment_option clearfix">Direct bank transfer
-									<input type="radio" checked="checked" name="radio">
-									<span class="checkmark"></span>
-								</label>
-							</div>
+
+				<div class="col-lg-4 offset-xl-2 contact_col">
+					<div class="contact_info">
+						<div class="contact_info_section">
+							<div class="contact_info_title" style="font-size:40px">Twoje dane:</div>
+							<ul>
+								<li>Imie: <span th:text="${user.firstName}"></span></li>
+								<li>Naziwsko: <span th:text="${user.lastName}"></span></li>
+								<li>Email: <span th:text="${user.email}"></span></li>
+								<li>Login: <span th:text="${user.login}"></span></li>
+							</ul>
 						</div>
-
-						<!-- Order Text -->
-						<div class="order_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin pharetra temp or so dales. Phasellus sagittis auctor gravida. Integ er bibendum sodales arcu id te mpus. Ut consectetur lacus.</div>
-						<div class="button order_button"><a href="#">Place Order</a></div>
+						<div class="button order_button"><a th:href="@{/edit}">Zmien moje dane</a></div>
 					</div>
 				</div>
 			</div>
