--- a/src/main/resources/static/css/checkout.css
+++ b/src/main/resources/static/css/checkout.css
@@ -922,9 +922,9 @@ section
 }
 .checkout_form label
 {
-	font-size: 14px;
+	font-size: 15px;
 	font-weight: 400;
-	color: #6c6a74;
+	color: #4e555b;
 }
 .checkout_input
 {
