--- a/src/main/resources/templates/registerForm.html
+++ b/src/main/resources/templates/registerForm.html
@@ -205,10 +205,10 @@
 				<!-- Get in touch -->
 				<div class="col-lg-8 contact_col">
 					<div class="get_in_touch">
-						<div class="section_title">Zaloguj się</div>
+						<div class="section_title">Zarejestruj sie</div>
 						<div class="section_subtitle">Podaj swoje dane</div>
 						<div class="contact_form_container">
-							<form action="#" th:action="@{/register}" method="post" th:object="${user}" id="contact_form" class="contact_form">
+							<form action="#" th:action="@{/user/register}" method="post" th:object="${user}" id="contact_form" class="contact_form">
 								<div class="row">
 									<div class="col-xl-6">
 										<!-- Name -->
