--- a/src/main/resources/static/css/product.css
+++ b/src/main/resources/static/css/product.css
@@ -887,7 +887,9 @@ section
 }
 .details_image_large img
 {
-	max-width: 100%;
+	width: 50%;
+	height: 50%;
+	/*max-width: 100%;*/
 }
 .details_image_thumbnails
 {
@@ -926,7 +928,9 @@ section
 }
 .details_image_thumbnail img
 {
-	max-width: 100%;
+	width: 50%;
+	height: 50%;
+	/*max-width: 100%;*/
 }
 .product_name
 {
