--- a/src/main/resources/templates/personalData.html
+++ b/src/main/resources/templates/personalData.html
@@ -2,15 +2,15 @@
 <html xmlns:th="http://www.thymeleaf.org"
 	  xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <head>
-<title>Checkout</title>
-<meta charset="utf-8">
-<meta http-equiv="X-UA-Compatible" content="IE=edge">
-<meta name="description" content="Sublime project">
-<meta name="viewport" content="width=device-width, initial-scale=1">
+	<title>Checkout</title>
+	<meta charset="utf-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="description" content="Sublime project">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" type="text/css" th:href="@{/css/bootstrap.min.css}">
 	<link th:href="@{/plugins/font-awesome-4.7.0/css/font-awesome.min.css}" rel="stylesheet" type="text/css">
-<link rel="stylesheet" type="text/css" th:href="@{/css/checkout.css}">
-<link rel="stylesheet" type="text/css" th:href="@{/css/checkout_responsive.css}">
+	<link rel="stylesheet" type="text/css" th:href="@{/css/checkout.css}">
+	<link rel="stylesheet" type="text/css" th:href="@{/css/checkout_responsive.css}">
 	<link rel="stylesheet" type="text/css" th:href="@{/css/contact.css}">
 	<link rel="stylesheet" type="text/css" th:href="@{/css/contact_responsive.css}">
 </head>
@@ -58,7 +58,7 @@
 								<div class="shopping_cart">
 									<a href="cart.html">
 										<svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-												 viewBox="0 0 489 489" style="enable-background:new 0 0 489 489;" xml:space="preserve">
+											 viewBox="0 0 489 489" style="enable-background:new 0 0 489 489;" xml:space="preserve">
 											<g>
 												<path d="M440.1,422.7l-28-315.3c-0.6-7-6.5-12.3-13.4-12.3h-57.6C340.3,42.5,297.3,0,244.5,0s-95.8,42.5-96.6,95.1H90.3
 													c-7,0-12.8,5.3-13.4,12.3l-28,315.3c0,0.4-0.1,0.8-0.1,1.2c0,35.9,32.9,65.1,73.4,65.1h244.6c40.5,0,73.4-29.2,73.4-65.1
@@ -73,8 +73,8 @@
 								<div class="search">
 									<div class="search_icon">
 										<svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-										viewBox="0 0 475.084 475.084" style="enable-background:new 0 0 475.084 475.084;"
-										 xml:space="preserve">
+											 viewBox="0 0 475.084 475.084" style="enable-background:new 0 0 475.084 475.084;"
+											 xml:space="preserve">
 										<g>
 											<path d="M464.524,412.846l-97.929-97.925c23.6-34.068,35.406-72.047,35.406-113.917c0-27.218-5.284-53.249-15.852-78.087
 												c-10.561-24.842-24.838-46.254-42.825-64.241c-17.987-17.987-39.396-32.264-64.233-42.826
@@ -98,7 +98,7 @@
 				</div>
 			</div>
 		</div>
-		
+
 		<!-- Search Panel -->
 		<div class="search_panel trans_300">
 			<div class="container">
@@ -130,7 +130,7 @@
 	<div class="menu menu_mm trans_300">
 		<div class="menu_container menu_mm">
 			<div class="page_menu_content">
-							
+
 				<div class="page_menu_search menu_mm">
 					<form action="#">
 						<input type="search" required="required" class="page_menu_search_input menu_mm" placeholder="Search for products...">
@@ -174,7 +174,7 @@
 			</ul>
 		</div>
 	</div>
-	
+
 	<!-- Home -->
 
 	<div class="home">
@@ -201,7 +201,7 @@
 	</div>
 
 	<!-- Checkout -->
-	
+
 	<div class="checkout">
 		<div class="container">
 			<div class="row">
@@ -253,7 +253,7 @@
 					</div>
 				</div>
 
-
+				<br/>
 				<div class="col-lg-4 offset-xl-2 contact_col">
 					<div class="contact_info">
 						<div class="contact_info_section">
@@ -274,10 +274,10 @@
 							<thead class="thead-dark">
 							<tr>
 								<th scope="col" th:text="'Id'"></th>
-								<th scope="col" th:text="'Desc'"></th>
-								<th scope="col" th:text="'Data zamowienia'"></th>
+<!--								<th scope="col" th:text="'Ilość przedmiotów zamówienia'"></th>-->
+								<th scope="col" th:text="'Data zamówienia'"></th>
 								<th scope="col" th:text="'Status'"></th>
-								<th scope="col" th:text="'Cena'"></th>
+								<th scope="col" th:text="'Do zaplaty'"></th>
 								<th scope="col" th:text="'test'"></th>
 							</tr>
 							</thead>
@@ -285,16 +285,16 @@
 							<th:block th:each="order : ${orders}">
 								<tr th:id="${order.id}" style="font-size:20px;">
 									<td th:text="${order.id}" style="text-align: center;"></td>
-									<td th:text="josjo" style="text-align: center;"></td>
+<!--									<td th:text="${order.}" style="text-align: center;"></td>-->
 									<td th:text="${order.orderDate}"></td>
 									<td th:text="${order.orderStatus}"></td>
 									<td th:text="${order.price}"></td>
-									<td><div class="button order_button" style="width:70%;height:70%; margin-top:0"><a th:href="@{/user/edit}">Zmien</a></div></td>
+									<td><div class="button order_button" style="width:70%;height:70%; margin:auto"><a th:href="@{/order/{id}(id=${order.id})}">Szczegoly</a></div></td>
 								</tr>
 							</th:block>
 							</tbody>
 						</table>
-						<div class="button order_button"><a th:href="@{/user/edit}">Zmien</a></div>
+						<!--<div class="button order_button"><a th:href="@{/user/edit}">Zmien</a></div>-->
 					</div>
 				</div>
 			</div>
@@ -302,7 +302,7 @@
 	</div>
 
 	<!-- Footer -->
-	
+
 	<div class="footer_overlay"></div>
 	<footer class="footer">
 		<div class="footer_background" th:style="'background:url('+ @{/images/footer.jpg} +');'"></div>
@@ -312,8 +312,8 @@
 					<div class="footer_content d-flex flex-lg-row flex-column align-items-center justify-content-lg-start justify-content-center">
 						<div class="footer_logo"><a href="#">Sublime.</a></div>
 						<div class="copyright ml-auto mr-auto"><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
-<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></div>
+							Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
+							<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></div>
 						<div class="footer_social ml-lg-auto">
 							<ul>
 								<li><a href="#"><i class="fa fa-pinterest" aria-hidden="true"></i></a></li>
