--- a/src/main/resources/templates/product.html
+++ b/src/main/resources/templates/product.html
@@ -186,8 +186,8 @@
 					<div class="row">
 						<div class="col">
 							<div class="home_content">
-								<div class="home_title">Smart Phones<span>.</span></div>
-								<div class="home_text"><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam a ultricies metus. Sed nec molestie eros. Sed viverra velit venenatis fermentum luctus.</p></div>
+								<div class="home_title" th:text="${item.product.category.type}"><span>.</span></div>
+								<div class="home_text"><p th:text="${item.product.category.desc}"></p></div>
 							</div>
 						</div>
 					</div>
@@ -207,8 +207,8 @@
 					<div class="details_image">
 						<div class="details_image_large"><img th:src="@{${path}}" alt=""><div class="product_extra product_new"><a href="categories.html">New</a></div></div>
 						<div class="details_image_thumbnails d-flex flex-row align-items-start justify-content-between">
-							<div class="details_image_thumbnail active" th:each="i:${item.images}" ><img th:src="@{${i.path}}" alt=""></div>
-							<div class="details_image_thumbnail" data-image="images/details_2.jpg"><img th:src="@{/images/details_2.jpg}" alt=""></div>
+							<div class="details_image_thumbnail active" th:each="i:${item.images}" th:data-image="@{${i.path}}"><img th:src="@{${i.path}}" alt="" ></div>
+<!--							<div class="details_image_thumbnail" data-image="images/details_2.jpg"><img th:src="@{/images/details_2.jpg}" alt=""></div>-->
 <!--							<div class="details_image_thumbnail" data-image="images/details_3.jpg"><img src="images/details_3.jpg" alt=""></div>-->
 <!--							<div class="details_image_thumbnail" data-image="images/details_4.jpg"><img src="images/details_4.jpg" alt=""></div>-->
 						</div>
@@ -217,17 +217,17 @@
 
 				<!-- Product Content -->
 				<div class="col-lg-6">
-					<div class="details_content">
-						<div class="details_name">Smart Phone</div>
+					<p class="details_content">
+						<div class="details_name" th:text="${item.product.name}"></div>
 <!--						<div class="details_discount">$890</div>-->
-						<div class="details_price" th:text="${item.price}"></div>
+						Cena: <div class="details_price" th:text="${item.price}"></div>zl
 
 						<!-- In Stock -->
 						<div class="in_stock_container">
-							<div class="availability">Availability:</div>
+							<div class="availability">Dostepność:</div>
 							<span th:if="${item.quantity >0}">Dostepny</span>
-							<p  th:if="${item.quantity >0}">Ilosc: <span th:text="${item.quantity}"></span></p>
-							<span th:if="${item.quantity ==0}">Niedostepny</span>
+							<p  th:if="${item.quantity >0}">Ilość: <span th:text="${item.quantity}"></span></p>
+							<span th:if="${item.quantity ==0}">Niedostępny</span>
 						</div>
 						<div class="details_text">
 							<p th:text="${item.desc}"></p>
@@ -248,12 +248,9 @@
 
 						<!-- Share -->
 						<div class="details_share">
-							<span>Share:</span>
+							<span>Ocena:</span>
 							<ul>
-								<li><a href="#"><i class="fa fa-pinterest" aria-hidden="true"></i></a></li>
-								<li><a href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
-								<li><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
-								<li><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
+								<p th:text="${item.rating}"></p>
 							</ul>
 						</div>
 					</div>
@@ -263,100 +260,72 @@
 			<div class="row description_row">
 				<div class="col">
 					<div class="description_title_container">
-						<div class="description_title">Description</div>
-						<div class="reviews_title"><a href="#">Reviews <span>(1)</span></a></div>
+<!--						<div class="description_title">Opis</div>-->
+<!--						<div class="reviews_title"><a href="#">Opinie <span>(1)</span></a></div>-->
+						<div class="description_title"><button onclick="showDesc()">Opis</button></div>
+						<div class="reviews_title"><button onclick="showReviews()">Opinie <span th:text="${votes.size()}"></span></button></div>
 					</div>
-					<div class="description_text">
-						<p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. Phasellus id nisi quis justo tempus mollis sed et dui. In hac habitasse platea dictumst. Suspendisse ultrices mauris diam. Nullam sed aliquet elit. Mauris consequat nisi ut mauris efficitur lacinia.</p>
+					<div id="desc_area" class="description_text" >
+						<p th:text="${item.desc}" style="font-size: 20px; font-weight:bold;text-align: center"></p>
 					</div>
-				</div>
-			</div>
-		</div>
-	</div>
+					<div id="review_area" class="description_text" style="display: none;">
+						<div class="overflow-auto">
+							<div class="media-body u-shadow-v18 g-bg-secondary g-pa-30" th:each="v : ${votes}">
+								<div class="g-mb-15">
+									<h5 class="h5 g-color-gray-dark-v1 mb-0" style="color: #1b1b1b;" th:text="${v.user.login}"></h5>
+									<span class="g-color-gray-dark-v4 g-font-size-12" th:text="${v.date}"></span>
+								</div>
 
-	<!-- Products -->
-
-	<div class="products">
-		<div class="container">
-			<div class="row">
-				<div class="col text-center">
-					<div class="products_title">Related Products</div>
-				</div>
-			</div>
-			<div class="row">
-				<div class="col">
-					
-					<div class="product_grid">
-
-						<!-- Product -->
-						<div class="product">
-							<div class="product_image"><img src="images/product_1.jpg" alt=""></div>
-							<div class="product_extra product_new"><a href="categories.html">New</a></div>
-							<div class="product_content">
-								<div class="product_title"><a href="product.html">Smart Phone</a></div>
-								<div class="product_price">$670</div>
+								<p th:text="${v.comment}"></p>
+								<span class="fa fa-star checked" style="color: aliceblue;font-size: 20px; background-color:#4e555b;" th:text="${v.score}"></span>
+							</div>
+						<div sec:authorize="isAuthenticated()">
+						<div class="newsletter">
+							<div class="container">
+								<div class="row">
+									<div class="col">
+										<div class="newsletter_border"></div>
+									</div>
+								</div>
+								<div class="row" >
+									<div class="col-lg-8 offset-lg-2" th:if="${!userVote}">
+										<div class="newsletter_content text-center">
+											<div class="newsletter_title">Komentarz</div>
+											<div class="newsletter_text"><p>Dodaj swój komentarz oraz ocene</p></div>
+											<div class="newsletter_form_container">
+												<form action="#" th:action="@{/vote/{id_item}(id_item=${item.id})}" th:object="${vote}" id="newsletter_form" class="newsletter_form" method="post">
+													<input type="text" class="newsletter_input" th:field="*{comment}" required="required">
+													<br/>
+													<div class="starrating risingstar d-flex justify-content-center flex-row-reverse">
+														<input type="radio" id="star5" th:field="*{score}" name="rating" value="5" /><label for="star5" title="5 star">5</label>
+														<input type="radio" id="star4" th:field="*{score}" name="rating" value="4" /><label for="star4" title="4 star">4</label>
+														<input type="radio" id="star3" th:field="*{score}" name="rating" value="3" /><label for="star3" title="3 star">3</label>
+														<input type="radio" id="star2" th:field="*{score}" name="rating" value="2" /><label for="star2" title="2 star">2</label>
+														<input type="radio" id="star1" th:field="*{score}" name="rating" value="1" /><label for="star1" title="1 star">1</label>
+													</div>
+													<button class="newsletter_button trans_200" type="submit" form="newsletter_form" value=""><span>Dodaj</span></button>
+												</form>
+											</div>
+										</div>
+									</div>
+									<div class="col-lg-8 offset-lg-2" th:if="${userVote}">
+										<div class="newsletter_title">Już dodałeś swój komentarz oraz ocene</div>
+									</div>
+								</div>
 							</div>
 						</div>
-
-						<!-- Product -->
-						<div class="product">
-							<div class="product_image"><img src="images/product_2.jpg" alt=""></div>
-							<div class="product_extra product_sale"><a href="categories.html">Sale</a></div>
-							<div class="product_content">
-								<div class="product_title"><a href="product.html">Smart Phone</a></div>
-								<div class="product_price">$520</div>
-							</div>
 						</div>
-
-						<!-- Product -->
-						<div class="product">
-							<div class="product_image"><img src="images/product_3.jpg" alt=""></div>
-							<div class="product_content">
-								<div class="product_title"><a href="product.html">Smart Phone</a></div>
-								<div class="product_price">$710</div>
-							</div>
+						<div sec:authorize="isAnonymous()">
+							<p style="font-size: 20px; font-weight:bold;text-align: center">Aby dodać komentarz musisz sie zalogowac</p>
 						</div>
-
-						<!-- Product -->
-						<div class="product">
-							<div class="product_image"><img src="images/product_4.jpg" alt=""></div>
-							<div class="product_content">
-								<div class="product_title"><a href="product.html">Smart Phone</a></div>
-								<div class="product_price">$330</div>
-							</div>
-						</div>
-
 					</div>
 				</div>
 			</div>
 		</div>
 	</div>
-
 	<!-- Newsletter -->
+	<br/>
 
-	<div class="newsletter">
-		<div class="container">
-			<div class="row">
-				<div class="col">
-					<div class="newsletter_border"></div>
-				</div>
-			</div>
-			<div class="row">
-				<div class="col-lg-8 offset-lg-2">
-					<div class="newsletter_content text-center">
-						<div class="newsletter_title">Subscribe to our newsletter</div>
-						<div class="newsletter_text"><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam a ultricies metus. Sed nec molestie eros</p></div>
-						<div class="newsletter_form_container">
-							<form action="#" id="newsletter_form" class="newsletter_form">
-								<input type="email" class="newsletter_input" required="required">
-								<button class="newsletter_button trans_200"><span>Subscribe</span></button>
-							</form>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-	</div>
 
 	<!-- Footer -->
 	
