--- a/src/main/resources/templates/product.html
+++ b/src/main/resources/templates/product.html
@@ -235,15 +235,19 @@
 
 						<!-- Product Quantity -->
 						<div class="product_quantity_container">
+							<form id="to_cart_form" action="#" th:action="@{/cart/{item_id}(item_id=${item.id})}" th:object="${orderItem}" method="post">
 							<div class="product_quantity clearfix">
-								<span>Qty</span>
-								<input id="quantity_input" type="text" pattern="[0-9]*" value="1">
-								<div class="quantity_buttons">
-									<div id="quantity_inc_button" class="quantity_inc quantity_control"><i class="fa fa-chevron-up" aria-hidden="true"></i></div>
-									<div id="quantity_dec_button" class="quantity_dec quantity_control"><i class="fa fa-chevron-down" aria-hidden="true"></i></div>
-								</div>
+								<span>Ilość</span>
+								<input th:field="*{itemQuantity}" id="quantity_input" type="number" pattern="[0-9]*" min="1" value="1">
+<!--								<div class="quantity_buttons">-->
+<!--									<div id="quantity_inc_button" class="quantity_inc quantity_control"><i class="fa fa-chevron-up" aria-hidden="true"></i></div>-->
+<!--									<div id="quantity_dec_button" class="quantity_dec quantity_control"><i class="fa fa-chevron-down" aria-hidden="true"></i></div>-->
+<!--								</div>-->
 							</div>
-							<div class="button cart_button"><a href="#">Add to cart</a></div>
+<!--								<button class="button cart_button"  type="submit" form="to_cart_form" value="submit">Dodaj</button>-->
+								<button class="newsletter_button trans_200" type="submit" form="to_cart_form" value=""><span>Dodaj</span></button>
+							</form>
+
 						</div>
 
 						<!-- Share -->
