--- a/src/main/resources/templates/cart.html
+++ b/src/main/resources/templates/cart.html
@@ -1,15 +1,16 @@
 <!DOCTYPE html>
-<html lang="en">
+<html xmlns:th="http://www.thymeleaf.org"
+	  xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <head>
 <title>Cart</title>
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="description" content="Sublime project">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" type="text/css" href="styles/bootstrap4/bootstrap.min.css">
-<link href="plugins/font-awesome-4.7.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
-<link rel="stylesheet" type="text/css" href="styles/cart.css">
-<link rel="stylesheet" type="text/css" href="styles/cart_responsive.css">
+	<link rel="stylesheet" type="text/css" th:href="@{/css/bootstrap.min.css}">
+	<link th:href="@{/plugins/font-awesome-4.7.0/css/font-awesome.min.css}" rel="stylesheet" type="text/css">
+<link rel="stylesheet" type="text/css" th:href="@{/css/cart.css}">
+<link rel="stylesheet" type="text/css" th:href="@{/css/cart_responsive.css}">
 </head>
 <body>
 
@@ -213,37 +214,38 @@
 				</div>
 			</div>
 			<div class="row cart_items_row">
-				<div class="col">
+				<div class="col" >
 
 					<!-- Cart Item -->
-					<div class="cart_item d-flex flex-lg-row flex-column align-items-lg-center align-items-start justify-content-start">
+					<div th:each="item : ${orderItems}" class="cart_item d-flex flex-lg-row flex-column align-items-lg-center align-items-start justify-content-start">
 						<!-- Name -->
 						<div class="cart_item_product d-flex flex-row align-items-center justify-content-start">
 							<div class="cart_item_image">
-								<div><img src="images/cart_1.jpg" alt=""></div>
+								<div><img th:src="@{/images/samsungS8.jpg}" alt=""></div>
 							</div>
 							<div class="cart_item_name_container">
-								<div class="cart_item_name"><a href="#">Smart Phone Deluxe Edition</a></div>
+								<div class="cart_item_name"><a href="#"><span th:text="${item.item.product.name}"></span></a></div>
 								<div class="cart_item_edit"><a href="#">Edit Product</a></div>
 							</div>
 						</div>
 						<!-- Price -->
-						<div class="cart_item_price">$790.90</div>
+						<div class="cart_item_price" th:text="${item.item.price}+'zl'">$790.90</div>
 						<!-- Quantity -->
 						<div class="cart_item_quantity">
 							<div class="product_quantity_container">
 								<div class="product_quantity clearfix">
-									<span>Qty</span>
-									<input id="quantity_input" type="text" pattern="[0-9]*" value="1">
-									<div class="quantity_buttons">
-										<div id="quantity_inc_button" class="quantity_inc quantity_control"><i class="fa fa-chevron-up" aria-hidden="true"></i></div>
-										<div id="quantity_dec_button" class="quantity_dec quantity_control"><i class="fa fa-chevron-down" aria-hidden="true"></i></div>
-									</div>
+									 <span th:text="'Ilosc: '+${item.itemQuantity}"></span>
+<!--									<input id="quantity_input" type="text" id th:text="${item.itemQuantity}">-->
+<!--									<input id="quantity_input" type="text" pattern="[0-9]*" value="1">-->
+<!--									<div class="quantity_buttons">-->
+<!--										<div id="quantity_inc_button" class="quantity_inc quantity_control"><i class="fa fa-chevron-up" aria-hidden="true"></i></div>-->
+<!--										<div id="quantity_dec_button" class="quantity_dec quantity_control"><i class="fa fa-chevron-down" aria-hidden="true"></i></div>-->
+<!--									</div>-->
 								</div>
 							</div>
 						</div>
 						<!-- Total -->
-						<div class="cart_item_total">$790.90</div>
+						<div class="cart_item_total" th:text="${item.itemQuantity*item.item.price}+'zl'"><span>zl</span>$790.90</div>
 					</div>
 
 				</div>
@@ -260,43 +262,43 @@
 				</div>
 			</div>
 			<div class="row row_extra">
-				<div class="col-lg-4">
+<!--				<div class="col-lg-4">-->
 					
 					<!-- Delivery -->
-					<div class="delivery">
-						<div class="section_title">Shipping method</div>
-						<div class="section_subtitle">Select the one you want</div>
-						<div class="delivery_options">
-							<label class="delivery_option clearfix">Next day delivery
-								<input type="radio" name="radio">
-								<span class="checkmark"></span>
-								<span class="delivery_price">$4.99</span>
-							</label>
-							<label class="delivery_option clearfix">Standard delivery
-								<input type="radio" name="radio">
-								<span class="checkmark"></span>
-								<span class="delivery_price">$1.99</span>
-							</label>
-							<label class="delivery_option clearfix">Personal pickup
-								<input type="radio" checked="checked" name="radio">
-								<span class="checkmark"></span>
-								<span class="delivery_price">Free</span>
-							</label>
-						</div>
-					</div>
+<!--					<div class="delivery">-->
+<!--						<div class="section_title">Shipping method</div>-->
+<!--						<div class="section_subtitle">Select the one you want</div>-->
+<!--						<div class="delivery_options">-->
+<!--							<label class="delivery_option clearfix">Next day delivery-->
+<!--								<input type="radio" name="radio">-->
+<!--								<span class="checkmark"></span>-->
+<!--								<span class="delivery_price">$4.99</span>-->
+<!--							</label>-->
+<!--							<label class="delivery_option clearfix">Standard delivery-->
+<!--								<input type="radio" name="radio">-->
+<!--								<span class="checkmark"></span>-->
+<!--								<span class="delivery_price">$1.99</span>-->
+<!--							</label>-->
+<!--							<label class="delivery_option clearfix">Personal pickup-->
+<!--								<input type="radio" checked="checked" name="radio">-->
+<!--								<span class="checkmark"></span>-->
+<!--								<span class="delivery_price">Free</span>-->
+<!--							</label>-->
+<!--						</div>-->
+<!--					</div>-->
 
 					<!-- Coupon Code -->
-					<div class="coupon">
-						<div class="section_title">Coupon code</div>
-						<div class="section_subtitle">Enter your coupon code</div>
-						<div class="coupon_form_container">
-							<form action="#" id="coupon_form" class="coupon_form">
-								<input type="text" class="coupon_input" required="required">
-								<button class="button coupon_button"><span>Apply</span></button>
-							</form>
-						</div>
-					</div>
-				</div>
+<!--					<div class="coupon">-->
+<!--						<div class="section_title">Coupon code</div>-->
+<!--						<div class="section_subtitle">Enter your coupon code</div>-->
+<!--						<div class="coupon_form_container">-->
+<!--							<form action="#" id="coupon_form" class="coupon_form">-->
+<!--								<input type="text" class="coupon_input" required="required">-->
+<!--								<button class="button coupon_button"><span>Apply</span></button>-->
+<!--							</form>-->
+<!--						</div>-->
+<!--					</div>-->
+<!--				</div>-->
 
 				<div class="col-lg-6 offset-lg-2">
 					<div class="cart_total">
@@ -306,7 +308,7 @@
 							<ul>
 								<li class="d-flex flex-row align-items-center justify-content-start">
 									<div class="cart_total_title">Subtotal</div>
-									<div class="cart_total_value ml-auto">$790.90</div>
+									<div class="cart_total_value ml-auto" th:text="${totalPrice}+'zl'">$790.90</div>
 								</li>
 								<li class="d-flex flex-row align-items-center justify-content-start">
 									<div class="cart_total_title">Shipping</div>
@@ -353,16 +355,16 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 	</footer>
 </div>
 
-<script src="js/jquery-3.2.1.min.js"></script>
-<script src="styles/bootstrap4/popper.js"></script>
-<script src="styles/bootstrap4/bootstrap.min.js"></script>
-<script src="plugins/greensock/TweenMax.min.js"></script>
-<script src="plugins/greensock/TimelineMax.min.js"></script>
-<script src="plugins/scrollmagic/ScrollMagic.min.js"></script>
-<script src="plugins/greensock/animation.gsap.min.js"></script>
-<script src="plugins/greensock/ScrollToPlugin.min.js"></script>
-<script src="plugins/easing/easing.js"></script>
-<script src="plugins/parallax-js-master/parallax.min.js"></script>
-<script src="js/cart.js"></script>
+<script th:src="@{/js/jquery-3.2.1.min.js}"></script>
+<script th:src="@{/css/popper.js}"></script>
+<script th:src="@{/css/bootstrap.min.js}"></script>
+<script th:src="@{/plugins/greensock/TweenMax.min.js}"></script>
+<script th:src="@{/plugins/greensock/TimelineMax.min.js}"></script>
+<script th:src="@{/plugins/scrollmagic/ScrollMagic.min.js}"></script>
+<script th:src="@{/plugins/greensock/animation.gsap.min.js}"></script>
+<script th:src="@{/plugins/greensock/ScrollToPlugin.min.js}"></script>
+<script th:src="@{/plugins/easing/easing.js}"></script>
+<script th:src="@{/plugins/parallax-js-master/parallax.min.js}"></script>
+<script th:src="@{/js/cart.js}"></script>
 </body>
 </html>
