--- a/src/main/resources/templates/orderDetails.html
+++ b/src/main/resources/templates/orderDetails.html
@@ -226,7 +226,7 @@
                                 <tr th:id="${i.id}" style="font-size:20px;">
                                     <td th:text="${i.item.id}" style="text-align: center;"></td>
                                     <td th:text="${i.item.desc}" style="text-align: center;"></td>
-                                    <td th:text="${i.item.price * i.itemQuantity}"></td>
+                                    <td th:text="${i.item.price}"></td>
                                     <td th:text="${i.itemQuantity}"></td>
                                     <td th:text="${i.item.version}"></td>
                                     <td th:text="${i.item.product.category.type}"></td>
