--- a/src/main/resources/static/css/cart.css
+++ b/src/main/resources/static/css/cart.css
@@ -1044,20 +1044,20 @@ section
 	position: absolute;
 	top: 0;
 	right: 1px;
-	height: 100%;
-	width: 29px;
+	height: 50%;
+	width: 50%;
 }
 .quantity_inc, 
 .quantity_dec
 {
-	display: -webkit-box;
+	/*display: -webkit-box;*/
 	display: -moz-box;
 	display: -ms-flexbox;
-	display: -webkit-flex;
+	/*display: -webkit-flex;*/
 	display: flex;
 	flex-direction: column;
-	align-items: center;
-	width: 100%;
+	align-items: inherit;
+	/*width: 50%;*/
 	height: 50%;
 	cursor: pointer;
 }
@@ -1074,7 +1074,7 @@ section
 .quantity_inc
 {
 	padding-bottom: 3px;
-	justify-content: flex-end;
+	/*justify-content: flex-end;*/
 }
 .quantity_inc i
 {
