--- a/src/main/resources/templates/cart.html
+++ b/src/main/resources/templates/cart.html
@@ -163,21 +163,21 @@
 
 		<div class="menu_close"><i class="fa fa-times" aria-hidden="true"></i></div>
 
-		<div class="menu_social">
-			<ul>
-				<li><a href="#"><i class="fa fa-pinterest" aria-hidden="true"></i></a></li>
-				<li><a href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
-				<li><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
-				<li><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
-			</ul>
-		</div>
+<!--		<div class="menu_social">-->
+<!--			<ul>-->
+<!--				<li><a href="#"><i class="fa fa-pinterest" aria-hidden="true"></i></a></li>-->
+<!--				<li><a href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>-->
+<!--				<li><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>-->
+<!--				<li><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>-->
+<!--			</ul>-->
+<!--		</div>-->
 	</div>
 	
 	<!-- Home -->
 
 	<div class="home">
 		<div class="home_container">
-			<div class="home_background" style="background-image:url(images/cart.jpg)"></div>
+			<div class="home_background" th:style="'background:url('+ @{/images/cart.jpg} +');'"></div>
 			<div class="home_content_container">
 				<div class="container">
 					<div class="row">
@@ -186,8 +186,8 @@
 								<div class="breadcrumbs">
 									<ul>
 										<li><a href="index.html">Home</a></li>
-										<li><a href="categories.html">Categories</a></li>
-										<li>Shopping Cart</li>
+										<li><a href="categories.html">Kategorie</a></li>
+										<li>Koszyk</li>
 									</ul>
 								</div>
 							</div>
@@ -206,10 +206,10 @@
 				<div class="col">
 					<!-- Column Titles -->
 					<div class="cart_info_columns clearfix">
-						<div class="cart_info_col cart_info_col_product">Product</div>
-						<div class="cart_info_col cart_info_col_price">Price</div>
-						<div class="cart_info_col cart_info_col_quantity">Quantity</div>
-						<div class="cart_info_col cart_info_col_total">Total</div>
+						<div class="cart_info_col cart_info_col_product">Produkt</div>
+						<div class="cart_info_col cart_info_col_price">Cena</div>
+						<div class="cart_info_col cart_info_col_quantity">Ilość</div>
+						<div class="cart_info_col cart_info_col_total">Całość</div>
 					</div>
 				</div>
 			</div>
@@ -217,15 +217,16 @@
 				<div class="col" >
 
 					<!-- Cart Item -->
+					<div th:if="${orderItems.size()==0}"><h1>Brak produktow</h1></div>
 					<div th:each="item : ${orderItems}" class="cart_item d-flex flex-lg-row flex-column align-items-lg-center align-items-start justify-content-start">
 						<!-- Name -->
 						<div class="cart_item_product d-flex flex-row align-items-center justify-content-start">
 							<div class="cart_item_image">
-								<div><img th:src="@{/images/samsungS8.jpg}" alt=""></div>
+								<div><img th:src="@{${item.item.getFirstPhoto()}}" alt=""></div>
 							</div>
 							<div class="cart_item_name_container">
-								<div class="cart_item_name"><a href="#"><span th:text="${item.item.product.name}"></span></a></div>
-								<div class="cart_item_edit"><a href="#">Edit Product</a></div>
+								<div class="cart_item_name"><a th:href="@{'/product/'+${item.item.id}}"> <span th:text="${item.item.product.name}"></span></a></div>
+<!--								<div class="cart_item_edit"><a href="#">Edit Product</a></div>-->
 							</div>
 						</div>
 						<!-- Price -->
@@ -235,6 +236,11 @@
 							<div class="product_quantity_container">
 								<div class="product_quantity clearfix">
 									 <span th:text="'Ilosc: '+${item.itemQuantity}"></span>
+									<div class="quantity_buttons">
+<!--									 <button class="button" >Usuń</button>-->
+										<div id="quantity_inc_button" class="quantity_inc quantity_control">
+											<a th:href="@{/cart/delete/{item_id}(item_id=${item.id})}">Usun</a></div>
+									</div>
 <!--									<input id="quantity_input" type="text" id th:text="${item.itemQuantity}">-->
 <!--									<input id="quantity_input" type="text" pattern="[0-9]*" value="1">-->
 <!--									<div class="quantity_buttons">-->
@@ -253,10 +259,9 @@
 			<div class="row row_cart_buttons">
 				<div class="col">
 					<div class="cart_buttons d-flex flex-lg-row flex-column align-items-start justify-content-start">
-						<div class="button continue_shopping_button"><a href="#">Continue shopping</a></div>
+						<div class="button continue_shopping_button"><a th:href="@{/}">Zamawiam dalej</a></div>
 						<div class="cart_buttons_right ml-lg-auto">
-							<div class="button clear_cart_button"><a href="#">Clear cart</a></div>
-							<div class="button update_cart_button"><a href="#">Update cart</a></div>
+							<div class="button clear_cart_button"><a th:href="@{/cart/delete/all}">Wyczyść koszyk</a></div>
 						</div>
 					</div>
 				</div>
@@ -302,25 +307,23 @@
 
 				<div class="col-lg-6 offset-lg-2">
 					<div class="cart_total">
-						<div class="section_title">Cart total</div>
-						<div class="section_subtitle">Final info</div>
-						<div class="cart_total_container">
+						<div class="section_title">Koszyk</div>
+						<div class="section_subtitle">Informacje o zamówieniu</div>
+						<div class="cart_total_container" th:if="${orderItems.size()==0}"><h1>Brak prduktow w koszyku</h1></div>
+						<div class="cart_total_container" th:if="${user.adress==null}"><h1>Aby dokończyć zamowienie musisz podac adres</h1></div>
+						<div class="cart_total_container" th:if="${orderItems.size()>0}">
 							<ul>
 								<li class="d-flex flex-row align-items-center justify-content-start">
-									<div class="cart_total_title">Subtotal</div>
-									<div class="cart_total_value ml-auto" th:text="${totalPrice}+'zl'">$790.90</div>
+									<div class="cart_total_title">Dostawa</div>
+									<div class="cart_total_value ml-auto" >Zawsze Darmowa</div>
 								</li>
 								<li class="d-flex flex-row align-items-center justify-content-start">
-									<div class="cart_total_title">Shipping</div>
-									<div class="cart_total_value ml-auto">Free</div>
-								</li>
-								<li class="d-flex flex-row align-items-center justify-content-start">
-									<div class="cart_total_title">Total</div>
-									<div class="cart_total_value ml-auto">$790.90</div>
+									<div class="cart_total_title">Do zaplaty</div>
+									<div class="cart_total_value ml-auto" th:text="${totalPrice}+'zl'">Free</div>
 								</li>
 							</ul>
 						</div>
-						<div class="button checkout_button"><a href="#">Proceed to checkout</a></div>
+						<div class="button checkout_button" th:if="${orderItems.size()>0 && user.getAdress()!=null}"><a th:href="@{/order/add}">Zatwierdz zamówienie</a></div>
 					</div>
 				</div>
 			</div>
@@ -331,7 +334,7 @@
 	
 	<div class="footer_overlay"></div>
 	<footer class="footer">
-		<div class="footer_background" style="background-image:url(images/footer.jpg)"></div>
+		<div class="footer_background" th:style="'background:url('+ @{/images/footer.jpg} +');'"></div>
 		<div class="container">
 			<div class="row">
 				<div class="col">
