--- a/src/main/resources/templates/product.html
+++ b/src/main/resources/templates/product.html
@@ -238,7 +238,7 @@
 							<form id="to_cart_form" action="#" th:action="@{/cart/{item_id}(item_id=${item.id})}" th:object="${orderItem}" method="post">
 							<div class="product_quantity clearfix">
 								<span>Ilość</span>
-								<input th:field="*{itemQuantity}" id="quantity_input" type="number" pattern="[0-9]*" min="1" value="1">
+								<input th:field="*{itemQuantity}" id="quantity_input" type="number" pattern="[0-9]*" min="1" th:max="${item.quantity}" value="1">
 <!--								<div class="quantity_buttons">-->
 <!--									<div id="quantity_inc_button" class="quantity_inc quantity_control"><i class="fa fa-chevron-up" aria-hidden="true"></i></div>-->
 <!--									<div id="quantity_dec_button" class="quantity_dec quantity_control"><i class="fa fa-chevron-down" aria-hidden="true"></i></div>-->
